--- a/versionizer/pom.xml
+++ b/versionizer/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>co.fizzed</groupId>
         <artifactId>fizzed-maven-plugins-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     
 </project>
