--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>fizzed-maven-plugins-parent</artifactId>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <description>Parent pom for all Fizzed Maven plugin projects</description>
     <url>https://github.com/fizzed/java-maven-plugins</url>
     
@@ -24,7 +24,7 @@
     <scm>
         <url>https://github.com/fizzed/java-maven-plugins</url>
         <connection>scm:git:git@github.com:fizzed/java-maven-plugins.git</connection>
-        <tag>version-1.0.1</tag>
+        <tag>master</tag>
     </scm>
     
     <developers>
