--- a/versionizer/pom.xml
+++ b/versionizer/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fizzed-versionizer-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <name>${project.artifactId}</name>
+    <name>fizzed-maven-plugins-versionizer</name>
 
     <parent>
         <groupId>co.fizzed</groupId>
