--- a/play/pom.xml
+++ b/play/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fizzed-play-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <name>${project.artifactId}</name>
+    <name>fizzed-maven-plugins-play</name>
 
     <parent>
         <groupId>co.fizzed</groupId>
