--- a/examples/hello-world/pom.xml
+++ b/examples/hello-world/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>co.fizzed</groupId>
+    <groupId>com.fizzed</groupId>
     <artifactId>fizzed-maven-plugins-examples-hello-world</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
@@ -41,7 +41,7 @@
             </plugin>
             -->
             <plugin>
-                <groupId>co.fizzed</groupId>
+                <groupId>com.fizzed</groupId>
                 <artifactId>fizzed-versionizer-maven-plugin</artifactId>
                 <version>${project.version}</version>
                 <executions>
@@ -51,7 +51,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <javaPackage>co.fizzed.examples.helloworld</javaPackage>
+                            <javaPackage>com.fizzed.examples.helloworld</javaPackage>
                         </configuration>
                     </execution>
                 </executions>
