--- a/versionizer/pom.xml
+++ b/versionizer/pom.xml
@@ -5,7 +5,7 @@
     <name>fizzed-maven-plugins-versionizer</name>
 
     <parent>
-        <groupId>co.fizzed</groupId>
+        <groupId>com.fizzed</groupId>
         <artifactId>fizzed-maven-plugins-parent</artifactId>
         <version>1.0.3-SNAPSHOT</version>
     </parent>
