--- a/watcher/pom.xml
+++ b/watcher/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.fizzed</groupId>
-        <artifactId>fizzed-maven-plugins-parent</artifactId>
+        <artifactId>fizzed-maven-plugins</artifactId>
         <version>1.0.6-SNAPSHOT</version>
     </parent>
     
