--- a/watcher/pom.xml
+++ b/watcher/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.fizzed</groupId>
         <artifactId>fizzed-maven-plugins</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7-SNAPSHOT</version>
     </parent>
     
     <build>
