--- a/watcher-maven-plugin/pom.xml
+++ b/watcher-maven-plugin/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>fizzed-watcher-maven-plugin</artifactId>
+    <artifactId>watcher-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <name>fizzed-maven-plugins-watcher</name>
+    <name>watcher-maven-plugin</name>
 
     <parent>
         <groupId>com.fizzed</groupId>
-        <artifactId>fizzed-maven-plugins</artifactId>
+        <artifactId>maven-plugins</artifactId>
         <version>1.0.7-SNAPSHOT</version>
     </parent>
     
