--- a/pom.xml
+++ b/pom.xml
@@ -30,43 +30,40 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- Define versions for Maven dependencies -->
+        <!-- Using 3.9.8 targets a modern Maven 3.x line -->
+        <maven.api.version>3.9.8</maven.api.version>
+        <!-- Using 3.13.1 for plugin tools is a recent, stable choice -->
+        <maven.plugin.tools.version>3.13.1</maven.plugin.tools.version>
     </properties>
+
+    <prerequisites>
+        <maven>3.7.0</maven>
+    </prerequisites>
 
     <build>
         <plugins>
+            <!-- The maven-plugin-plugin is what reads your annotations -->
+            <!-- (@Mojo, @Parameter) and generates the necessary -->
+            <!-- plugin descriptor files (plugin.xml) for Maven to understand. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.4</version>
-                <configuration>
-                    <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
+                <version>${maven.plugin.tools.version}</version>
                 <executions>
                     <execution>
-                        <id>mojo-descriptor</id>
+                        <id>default-descriptor</id>
+                        <phase>process-classes</phase>
                         <goals>
                             <goal>descriptor</goal>
                         </goals>
                     </execution>
-                    <!-- if you want to generate help goal -->
                     <execution>
                         <id>help-goal</id>
                         <goals>
                             <goal>helpmojo</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-maven-plugin</artifactId>
-                <version>1.3.8</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
+                        <phase>process-classes</phase>
                     </execution>
                 </executions>
             </plugin>
@@ -74,7 +71,31 @@
     </build>
 
     <dependencies>
+        <!-- Core API for creating a Mojo (Maven Old Java Object) -->
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>${maven.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Provides access to the Maven project object, build session, etc. -->
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>${maven.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Required for using annotations like @Mojo, @Parameter, etc. -->
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>${maven.plugin.tools.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--<dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven.version}</version>
@@ -109,7 +130,7 @@
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-utils</artifactId>
             <version>1.5.15</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 </project>
