--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <modules>
         <module>version-maven-plugin</module>
         <module>watcher-maven-plugin</module>
+        <module>hooks-maven-plugin</module>
     </modules>
 
     <properties>
