--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fizzed</groupId>
     <artifactId>maven-plugins</artifactId>
     <name>maven-plugins</name>
     <packaging>pom</packaging>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>2.0.0</version>
     <description>Parent pom for all Fizzed Maven plugin projects</description>
     <url>https://github.com/fizzed/java-maven-plugins</url>
 
@@ -32,7 +31,7 @@
     <scm>
         <url>https://github.com/fizzed/maven-plugins</url>
         <connection>scm:git:git@github.com:fizzed/maven-plugins.git</connection>
-        <tag>version-1.0.2</tag>
+        <tag>v2.0.0</tag>
     </scm>
 
     <developers>
