--- a/watcher-maven-plugin/pom.xml
+++ b/watcher-maven-plugin/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.fizzed</groupId>
         <artifactId>maven-plugins</artifactId>
-        <version>1.0.7-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     
 </project>
