--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>maven-plugins</artifactId>
     <name>maven-plugins</name>
     <packaging>pom</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <description>Parent pom for all Fizzed Maven plugin projects</description>
     <url>https://github.com/fizzed/java-maven-plugins</url>
 
@@ -31,7 +31,7 @@
     <scm>
         <url>https://github.com/fizzed/maven-plugins</url>
         <connection>scm:git:git@github.com:fizzed/maven-plugins.git</connection>
-        <tag>v2.0.0</tag>
+        <tag>version-1.0.2</tag>
     </scm>
 
     <developers>
