--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <!-- use @ for propert to be interpolated -->
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <!-- when do people really version their submods different? -->
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <releaseProfiles>release</releaseProfiles>
+                </configuration>
+            </plugin>
             <!-- The maven-plugin-plugin is what reads your annotations -->
             <!-- (@Mojo, @Parameter) and generates the necessary -->
             <!-- plugin descriptor files (plugin.xml) for Maven to understand. -->
@@ -183,6 +195,7 @@
                         <configuration>
                             <publishingServerId>central</publishingServerId>
                             <autoPublish>true</autoPublish>
+                            <deploymentName>maven-plugins</deploymentName>
                         </configuration>
                     </plugin>
                     <plugin>
